syntax = "proto3";

import "google/protobuf/empty.proto";
import "protos/rtos/common.proto";
import "protos/rtos/usrgrpc_getcurrenuserpermissions.proto";

option csharp_namespace = "Adnc.Shared.Rpc.Grpc.Services";

package services;

service  UsrGrpc {
  rpc GetCurrenUserPermissions(rtos.UserPermissionsRequest) returns (rtos.GrpcResponse);
  rpc GetDepts(google.protobuf.Empty) returns (rtos.GrpcResponse);
}
