syntax = "proto3";

option csharp_namespace = "Adnc.Shared.Grpc.Rtos";

package rtos;

message UserPermissionsReply{
  repeated string Permissions= 1;
}

message UserPermissionsRequest {
 int64 UserId = 1;
 repeated  string Permissions = 2;
 string ValidationVersion =3;
}